--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="row">
                 <div class="col-md-12 about-us-content">
                     <p>
-                        The <strong>International Conference on Advancement in Engineering Sciences</strong> will be held on <strong>4-5 September 2024</strong> at the <strong>Institute of Electrical Electronics & Computer Engineering, University of the Punjab</strong>, under the umbrella of the Punjab Higher Education Commission. The conference encourages the submission of original research papers, case studies, and technical presentations that contribute to the advancement of knowledge in the engineering field. Additionally, it welcomes interdisciplinary studies and encourages collaborations across different engineering disciplines.
+                        The<strong> International Conference on Advancement in Engineering Sciences</strong> will be held on <strong>4-5 September 2024</strong> at the <strong>Institute of Electrical Electronics & Computer Engineering, University of the Punjab</strong>, under the umbrella of the Punjab Higher Education Commission. The conference encourages the submission of original research papers, case studies, and technical presentations that contribute to the advancement of knowledge in the engineering field. Additionally, it welcomes interdisciplinary studies and encourages collaborations across different engineering disciplines.
                     </p>
                     <p><strong>Focus of the conference includes but is not limited to:</strong></p>
                     <div class="row conference-focus">
@@ -249,12 +249,28 @@
                 </div>
             </div>
             <!-- Brochure image added at the end of the container -->
-            <div class="row mt-4">
-                <div class="col-md-12 text-center">
-                    <img src="/Images/Background/brow.png" class="img-fluid w-25 h-auto mx-auto" alt="Brochure Image">
-                </div>
+          <!-- Image Section -->
+<div class="row mt-4">
+    <div class="col-md-12 text-center">
+        <img src="/Images/Background/brow.png" class="img-fluid w-25 h-auto mx-auto" alt="Brochure Image" data-bs-toggle="modal" data-bs-target="#imageModal">
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="imageModalLabel">Brochure Image</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-center">
+                <img src="/Images/Background/brow.png" class="img-fluid w-100 h-auto" alt="Brochure Image">
             </div>
         </div>
+    </div>
+</div>
+
         
     
         <div class="row mt-5 gx-0 custom-row-1" style="background:#0f1726;">
