--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <div class="row">
                 <div class="col-md-12 about-us-content">
                     <p>
-                        The<strong> International Conference on Advancement in Engineering Sciences</strong> will be held on <strong>4-5 September 2024</strong> at the <strong>Institute of Electrical Electronics & Computer Engineering, University of the Punjab</strong>, under the umbrella of the Punjab Higher Education Commission. The conference encourages the submission of original research papers, case studies, and technical presentations that contribute to the advancement of knowledge in the engineering field. Additionally, it welcomes interdisciplinary studies and encourages collaborations across different engineering disciplines.
+                        The <strong>International Conference on Advancement in Engineering Sciences</strong> will be held on <strong>4-5 September 2024</strong> at the <strong>Institute of Electrical Electronics & Computer Engineering, University of the Punjab</strong>, under the umbrella of the Punjab Higher Education Commission. The conference encourages the submission of original research papers, case studies, and technical presentations that contribute to the advancement of knowledge in the engineering field. Additionally, it welcomes interdisciplinary studies and encourages collaborations across different engineering disciplines.
                     </p>
                     <p><strong>Focus of the conference includes but is not limited to:</strong></p>
                     <div class="row conference-focus">
@@ -301,8 +301,10 @@
                             </ul>
                         </div>
                     </div>
+                    <p>For paper submission, please use the <a href="./Template.docx" target="_blank">conference paper template</a>.</p>
                 </div>
             </div>
+            
             <!-- Brochure image added at the end of the container -->
           <!-- Image Section -->
 <div class="row mt-4">
