--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           <!-- Image Section -->
 <div class="row mt-4">
     <div class="col-md-12 text-center">
-        <img src="/Images/Background/brow.png" class="img-fluid w-25 h-auto mx-auto" alt="Brochure Image" data-bs-toggle="modal" data-bs-target="#imageModal">
+        <img src="/Images/Background/Newbrochure.png" class="img-fluid w-25 h-auto mx-auto" alt="Brochure Image" data-bs-toggle="modal" data-bs-target="#imageModal">
     </div>
 </div>
 
