--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-center">
-                <img src="/Images/Background/brow.png" class="img-fluid w-100 h-auto" alt="Brochure Image">
+                <img src="/Images/Background/Newbrochure.png" class="img-fluid w-100 h-auto" alt="Brochure Image">
             </div>
         </div>
     </div>
