--- a/index.html
+++ b/index.html
@@ -251,11 +251,7 @@
                 <div class="col-md-12 img-fluid">
                     <div class="image-container">
                         <img src="/Images/Background/brow1.jpg" alt="Event Image" class="img-fluid">
-                        <div class="centered-text">
-                            Original Research articles and Technical Reviews can be submitted 
-                            for the conference through on-line submission system. All papers 
-                            are peer reviewed prior to editorial decision on the submissions.
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -266,9 +262,11 @@
                         The <strong>International Conference on Advancement in Engineering Sciences</strong> will be held on <strong>4-5 September 2024</strong> at the <strong>Institute of Electrical Electronics & Computer Engineering, University of the Punjab</strong>, under the umbrella of the Punjab Higher Education Commission. The conference encourages the submission of original research papers, case studies, and technical presentations that contribute to the advancement of knowledge in the engineering field. Additionally, it welcomes interdisciplinary studies and encourages collaborations across different engineering disciplines.
                     </p>
                     <p class="bold-text">
-                        All papers that are accepted and presented will be published in conference proceedings.
-                        Selected high-quality papers submitted to the conference will be published in Innovative Computing Review (ICR)* HEC Y-category.
-                    </p>
+
+                            Original Research articles and Technical Reviews can be submitted 
+                            for the conference through on-line submission system. All papers 
+                            are peer reviewed prior to editorial decision on the submissions.
+              </p>
                     <p><strong>Focus of the conference includes but is not limited to:</strong></p>
                    
                     <div class="row conference-focus">
@@ -530,7 +528,7 @@
                 <div class="col-md-12">
                     <div class="schedule_heading mb-5 mt-4">
                         <h1 class="text-center mb-5">SCHEDULE</h1>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, alia honestatis an qui, ne soluta nemore eripuit sed. Falli exerci aperiam ut his, prompta feugiat usu minimum delicata.</p>
+                        <p style="visibility: hidden;" class="text-muted">Lorem ipsum dolor sit amet, alia honestatis an qui, ne soluta nemore eripuit sed. Falli exerci aperiam ut his, prompta feugiat usu minimum delicat</p>
                     </div>
                 </div>
             </div>
@@ -615,8 +613,8 @@
                                 </a>
                                 <div class="speaker-heading">
                                     <h5>Dr. Muhammad Shakeel Ahmed</h5>
-                                    <h6>Senior Lecturer</h6>
-                                    <p>Universiti Malaya Power Energy Dedicated Advanced Centre</p>
+
+                                    <p>University Malaya Power Energy Dedicated Advanced Centre</p>
                                 </div>
                                 <div class="speaker-desc">
                                     <p></p>
@@ -638,8 +636,7 @@
                                 </a>
                                 <div class="speaker-heading">
                                     <h5>Dr. Jibran Khaliq</h5>
-                                    <h6>Associate Professor
-                                    </h6>
+
                                     <p> Mechanical and Construction Engineering at Northumbria University NewCastle
                                     </p>
                                 </div>
@@ -663,7 +660,7 @@
                                 </a>
                                 <div class="speaker-heading">
                                     <h5>Dr. Tanveer A. Tabish</h5>
-                                    <h6>BHF Advanced Training Fellow</h6>
+
                                     <p>Cardiovascular Nanomedicine</p>
                                 </div>
                                 <div class="speaker-desc">
@@ -686,7 +683,7 @@
                                 </a>
                                 <div class="speaker-heading">
                                     <h5 class="text-uppercase">Prof. Dr. Tahir Izhar</h5>
-                                    <h6>Director R&D</h6>
+
                                     <p>Maxell Power Pvt Ltd</p>
                                 </div>
                                 <div class="speaker-desc">
@@ -709,7 +706,7 @@
                                 </a>
                                 <div class="speaker-heading">
                                     <h5>Mr. Nauman Ahmad Zaffar</h5>
-                                    <h6>Project Director of the National Incubation Center</h6>
+
                                     <p>Syed Babar Ali School of Science and Engineering (LUMS)</p>
                                 </div>
                                 <div class="speaker-desc">
