--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                                 <div class="speaker-heading">
                                     <h5>Dr. Muhammad Shakeel Ahmed</h5>
 
-                                    <p>University Malaya Power Energy Dedicated Advanced Centre</p>
+                                    <p>University Malaya Power Energy Dedicated Advanced Centre, Malaysia</p>
                                 </div>
                                 <div class="speaker-desc">
                                     <p></p>
@@ -636,7 +636,7 @@
                                 <div class="speaker-heading">
                                     <h5>Dr. Jibran Khaliq</h5>
 
-                                    <p> Northumbria University NewCastle,UK</p>
+                                    <p> Northumbria University NewCastle, UK</p>
                                 </div>
                                 <div class="speaker-desc">
                                     <p></p>
@@ -659,7 +659,7 @@
                                 <div class="speaker-heading">
                                     <h5>Dr. Tanveer A. Tabish</h5>
 
-                                    <p>Cardiovascular Nanomedicine</p>
+                                    <p>Radcliffe Department of Medicine University of Oxford, Uk</p>
                                 </div>
                                 <div class="speaker-desc">
                                     <p></p>
@@ -682,7 +682,7 @@
                                 <div class="speaker-heading">
                                     <h5 class="text-uppercase">Prof. Dr. Tahir Izhar</h5>
 
-                                    <p>Maxell Power Pvt Ltd</p>
+                                    <p>Maxell Power Pvt Ltd, Pakistan</p>
                                 </div>
                                 <div class="speaker-desc">
                                     <p></p>
@@ -705,7 +705,7 @@
                                 <div class="speaker-heading">
                                     <h5>Mr. Nauman Ahmad Zaffar</h5>
 
-                                    <p>Syed Babar Ali School of Science and Engineering (LUMS)</p>
+                                    <p>Syed Babar Ali School of Science and Engineering LUMS, Pakisyan</p>
                                 </div>
                                 <div class="speaker-desc">
                                     <p></p>
@@ -735,7 +735,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-4 wow animated fadeInRight" data-wow-duration="1s" data-wow-delay="0.3s">
                     <div class="pricing-block text-center">
                         <div class="price-tag">
-                            <h1>Rs:3000</h1>
+                            <h1>Rs:3000 /-</h1>
                             <div class="price-tag-desc">
                                 <h5>Students</h5>
                             </div>
@@ -748,7 +748,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-4 wow animated fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
                     <div class="pricing-block text-center position-relative">
                         <div class="price-tag active-tag">
-                            <h1>Rs:5000</h1>
+                            <h1>Rs:5000 /-</h1>
                             <div class="price-tag-desc">
                                 <h5>Faculty (International)</h5>
                             </div>
@@ -761,7 +761,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-4 wow animated fadeInRight" data-wow-duration="1s" data-wow-delay="0.7s">
                     <div class="pricing-block text-center wow animated fadeInRight">
                         <div class="price-tag">
-                            <h1>$75 or Rs:20000 </h1>
+                            <h1>$75 or Rs:20000 /- </h1>
                             <div class="price-tag-desc">
                                 <h5>International</h5>
                             </div>
