--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                             </ul>
                         </div>
                     </div>
-                    <p>For paper submission, please use the <a href="./Template.docx" target="_blank">conference paper template</a>.</p>
+                    <p>For paper submission, please use the <a href="./Templatenew.docx" target="_blank">conference paper template</a>.</p>
                 </div>
             </div>
             
