--- a/index.html
+++ b/index.html
@@ -315,8 +315,7 @@
                     <p>For paper submission, please use the <a href="./Templatenew.docx" target="_blank">conference paper template</a>.</p>
                 </div>
             </div>
-            
-         <!-- Brochure image added at the end of the container -->
+          <!-- Brochure image added at the end of the container -->
 <!-- Image Section -->
 <div class="my-row mt-4">
     <div class="my-col text-center">
@@ -324,20 +323,6 @@
     </div>
 </div>
 
-<!-- Modal -->
-<div class="my-modal" id="myImageModal">
-    <div class="my-modal-dialog">
-        <div class="my-modal-content">
-            <div class="my-modal-header">
-                <h5 class="my-modal-title">Brochure Image</h5>
-                <button type="button" class="my-close" id="myCloseModal">&times;</button>
-            </div>
-            <div class="my-modal-body text-center">
-                <img src="/Images/Background/Newbrochure.png" class="my-modal-img" alt="Brochure Image">
-            </div>
-        </div>
-    </div>
-</div>
   
     
         <div class="row mt-5 gx-0 custom-row-1" style="background:#0f1726;">
@@ -588,7 +573,7 @@
                 <div class="col-md-12">
                     <div class="speakers-title mt-5 wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
                         <h1 class="mb-5">SPEAKERS</h1>
-                        <p class="mb-5">Our Conference is being hosted by the following respected speakers</p>
+                        <p style="visibility: hidden;" class="mb-5">Our Conference is being hosted by the following respected speakers</p>
                     </div>
                 </div>
             </div>
@@ -703,7 +688,7 @@
                                     </div>
                                 </a>
                                 <div class="speaker-heading">
-                                    <h5>Mr. Nauman Ahmad Zaffar</h5>
+                                    <h5>Prof. Nauman Ahmad Zaffar</h5>
 
                                     <p>Syed Babar Ali School of Science and Engineering LUMS, Pakisyan</p>
                                 </div>
