--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
                             <li class="nav-item custom-nav-item">
                                 <a class="nav-link custom-nav-link" id="PRC" aria-current="page"
                                     href="#pricing">Registration</a>
-                            </li>
+                                </li>
+                                
                             <li class="nav-item custom-nav-item" style="display: none;">
                                 <a class="nav-link custom-nav-link" id="SPN" aria-current="page" href="#sponsors">Sponsors</a>
                               </li>
@@ -188,6 +189,16 @@
                                 <a class="nav-link custom-nav-link" id="CNT" aria-current="page"
                                     href="#Contact">Contact</a>
                             </li>
+                            <center>
+                                <a class="text-decoration-none" href="" class="text-decoration-none"target="_blank"
+                                        style="color:#fff;">
+                                <button data-mdb-ripple-color="success" type="submit"
+                                    class="btn btn-md btn-register p-2" data-wow-duration="1.5s"
+                                    data-wow-delay="5.4s">
+                                    Paper Submission
+                                </button>
+                            </a>
+                            </center>
                         </ul>
                     </div>
                 </div>
