--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <ul>
                                 <li>Agricultural Engineering</li>
                                 <li>Artificial Intelligence</li>
-                                <li>Biological Engineering and Sciences</li>
+
                                 <li>Biomedical Engineering</li>
                                 <li>Chemical Engineering</li>
                                 <li>Civil Engineering</li>
@@ -301,7 +301,7 @@
                         <div class="col-md-4 col-sm-6">
                             <ul>
                                 <li>Industrial Engineering</li>
-                                <li>Information Engineering</li>
+
                                 <li>Informational Technology</li>
                                 <li>Manufacturing Engineering and Technology</li>
                                 <li>Materials Engineering</li>
@@ -310,6 +310,9 @@
                                 <li>Optical Engineering</li>
                                 <li>Petroleum Engineering</li>
                                 <li>Power Engineering</li>
+                                <li>Polymer Engineering</li>
+                                <li>Renewable Energy Technology</li>
+
                             </ul>
                         </div>
                         <div class="col-md-4 col-sm-6">
@@ -330,7 +333,7 @@
 <!-- Image Section -->
 <div class="my-row mt-4">
     <div class="my-col text-center">
-        <img src="/Images/Background/Flyer.png" class="my-img" alt="Brochure Image" id="myBrochureImg">
+        <img src="/Images/Background/fly.png" class="my-img" alt="Brochure Image" id="myBrochureImg">
     </div>
 </div>
 
@@ -435,7 +438,9 @@
                 </div>
                 <!-- MODAL SLIDER END   -->
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 col-xxl-6">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 col-xxl-6 "><div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 col-xxl-6" style="display: none;">
+                <!-- Content goes here -->
+              
                 <div class="row gx-0 align-items-center justify-content-center">
                     <div class="row mt-4">
                         <div class="col-md-6">
@@ -757,7 +762,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-4 wow animated fadeInRight" data-wow-duration="1s" data-wow-delay="0.7s">
                     <div class="pricing-block text-center wow animated fadeInRight">
                         <div class="price-tag">
-                            <h1>$75 or Rs:20000 /- </h1>
+                            <h1>$75 <br> or<br> Rs : 20000 /- </h1>
                             <div class="price-tag-desc">
                                 <h5>International</h5>
                             </div>
@@ -790,14 +795,14 @@
             <div class="col-md-6">
                 <div class="twitter wow animated fadeInRight" data-wow-duration="1s" data-wow-delay="0.6s">
                     <center>
-                        <img style="width:200px;" src="./Images/Logos/umt.png" alt="twitter">
+                        <img style="width:300px;" src="./Images/Logos/umt.png" alt="twitter">
                     </center>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="adobe wow animated fadeInRight" data-wow-duration="1s" data-wow-delay="0.7s">
                     <center>
-                        <img style="width:200px;" src="./Images/Logos/malya.png" alt="adobe">
+                        <img style="width:300px;" src="./Images/Logos/malya.png" alt="adobe">
                     </center>
                 </div>
             </div>
@@ -818,7 +823,7 @@
         <div class="row justify-content-center">
             <div class="col-sm-6 col-md-4 col-lg-2 wow animated fadeInRight d-flex justify-content-center" data-wow-duration="1s" data-wow-delay="0.6s">
                 <center>
-                    <img style="width:200px; margin: 10px;" src="./Images/sponsers/nipon.svg" alt="sponsor1">
+                    <img style="width:200px; margin: 10px; background-color:white" src="./Images/sponsers/nipon.svg" alt="sponsor1">
                 </center>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-2 wow animated fadeInRight d-flex justify-content-center" data-wow-duration="1s" data-wow-delay="0.7s">
@@ -828,7 +833,7 @@
             </div>
             <div class="col-sm-6 col-md-4 col-lg-2 wow animated fadeInRight d-flex justify-content-center" data-wow-duration="1s" data-wow-delay="0.8s">
                 <center>
-                    <img style="width:200px; margin: 10px;" src="./Images/sponsers/noor.png" alt="sponsor3">
+                    <img style="width:200px; margin: 10px; background-color:white ;" src="./Images/sponsers/noor.png" alt="sponsor3">
                 </center>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-2 wow animated fadeInRight d-flex justify-content-center" data-wow-duration="1s" data-wow-delay="0.9s">
@@ -1002,7 +1007,7 @@
                         </div>
                         <div class="contact-block-content">
                             <p>osama.ee@pu.edu.pk<br>
-                                info.iceas@pu.edu.pk<br>
+                                conf.iceas@pu.edu.pk<br>
                             </p>
                         </div>
                     </div>
