--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 <!-- Image Section -->
 <div class="my-row mt-4">
     <div class="my-col text-center">
-        <img src="/Images/Background/fly.png" class="my-img" alt="Brochure Image" id="myBrochureImg">
+        <img src="/Images/Background/Updated.png" class="my-img" alt="Brochure Image" id="myBrochureImg">
     </div>
 </div>
 
