--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 <!-- Image Section -->
 <div class="my-row mt-4">
     <div class="my-col text-center">
-        <img src="/Images/Background/Updated.png" class="my-img" alt="Brochure Image" id="myBrochureImg">
+        <img src="/Images/Background/fly.png" class="my-img" alt="Brochure Image" id="myBrochureImg">
     </div>
 </div>
 
@@ -820,7 +820,7 @@
                     <strong>Prof Dr. JEYRAJ A/L SELVARAJ </strong>
                     <p>Deputy Director UMPEDAC, University of Malaya</p>
                     <strong>Prof Dr. Atif Alvi </strong>
-                    <p>DEAN Engg, UMT</p>
+                    <p>DEAN SST, UMT</p>
     
                     <!-- Advisory Committee -->
                     <h3>Advisory Committee:</h3>
