--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                         <div class="price-tag active-tag">
                             <h1>Rs:5000 /-</h1>
                             <div class="price-tag-desc">
-                                <h5>Faculty (International)</h5>
+                                <h5>Faculty</h5>
                             </div>
                         </div>
                         <div class="price-content">
